syntax = "proto3";

import "google/protobuf/empty.proto";

option go_package = "./;proto";

// 定义具体的接口
service User {
  rpc GetUserList(PageInfo) returns (UserListResponse); // 用户列表
  rpc GetUserByMobile(MobileRequest) returns (UserInfoResponse); //通过 mobile 查询用户
  rpc GetUserById(IDRequest) returns (UserInfoResponse); //通过 id 查询用户
  rpc CreateUser(CreateUserInfo) returns (UserInfoResponse); // 添加用户
  rpc UpdateUser(UpdateUserInfo) returns (google.protobuf.Empty); //更新用户
  rpc CheckPassword(PasswordCheckInfo) returns (CheckResponse); //检查密码
}

message PageInfo {
  uint32 pNum = 1;
  uint32 PSize = 2;
}

message MobileRequest {
  string mobile = 1;
}

message IDRequest {
  int32 id = 1;
}

message CreateUserInfo {
  string nickName = 1;
  string password = 2;
  string mobile = 3;
}

message UpdateUserInfo {
  int32 id = 1;
  string nickName = 2;
  string password = 3;
  int64 birthday = 4;
  string gender = 5;
}

message UserInfoResponse {
  int32 id = 1;
  string password = 2;
  string mobile = 3;
  string nickName = 4;
  int64 birthday = 5;
  string gender = 6;
  int64 role = 7;
}

message UserListResponse {
  int64 total = 1;
  repeated UserInfoResponse data = 2;
}

message PasswordCheckInfo {
  string password = 1;
  string encryptedPassword = 2;
}

message CheckResponse {
  bool success = 1;
}